Move to s3 (#594)
* Feat: utilisation d'un stockage S3

* Update bauhaus-local-dev.properties

* fix (boolean)

* Create interface and storageConfiguration

* refactor(s3) use spring profile and apply abstraction :
- apply th abstraction of FilesOperations in DocumentsUtils and DocumentsImpl
- adjust model of FilesOperations
- Remove minio related properties from config
- use Spring boot @ConfigurationProperties for minio props
- use Profiles in  StorageConfiguration (minio files operations only activated when s3 profile is activated)
- property spring.profiles.active to activate s3 profile when needed
- use records where possible
- Fix beans configuration for FilesOperations

* Update pom.xml

* Feat : add method for download and copy

* Update FileSystemOperation.java

* Update FileSystemOperation.java

* Maj suite à review

* Add a constructor in RmesException

* refactor(clean after review)

* fix(fix tests after clean after review)

* Modify pom

* delete old method changeDocument and fixed DocumentsImpl and DocumentsUtils test

* refactor (tests DocumentsUtils) use less sofisticated libs

* refactor (tests DocumentsUtils) forgot

---------

Co-authored-by: Fabrice Bibonne <fabrice.bibonne@gmail.com>
Co-authored-by: Fabrice B <fabrice.bibonne@insee.fr>